<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Local File Sharing</string>
    <string name="edit">Edit</string>
    <string name="create_folder">Create Folder</string>
    <string name="sort_by">Sort By</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="theme">Theme</string>
    <string name="theme_pref_key">theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="follow_system">Follow System</string>
    <string name="scan">Scan</string>
    <string name="home">Home</string>
    <string name="start_share">Start Share</string>
    <string name="stop_share">Stop Share</string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="files">Files</string>
    <string name="add">Add</string>
    <string name="root_files">Root Files</string>
    <string name="upload">Upload</string>
    <string name="move">Move</string>
    <string name="copy">Copy</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="detail">Detail</string>
    <string name="rename">Rename</string>
    <string name="compress">Compress</string>
    <string name="allow">Allow</string>
    <string name="disallow">Disallow</string>
    <string name="ask">Ask</string>
    <string name="write_access">Write Access</string>
    <string name="delete_access">Delete Access</string>
    <string name="permission">Permission</string>
    <string name="preparing">Preparing</string>
    <string name="cancel">Cancel</string>
    <string name="uploading">Uploading</string>
    <string name="operation_options_title">Rename file or replace existing one?</string>
    <string name="operation_options_description">You already have file named %s in the destination folder</string>
    <string name="operation_options_apply_to_similar_items">Do this for all similar items</string>
    <string name="skip">Skip</string>
    <string name="replace">Replace</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="size">Size</string>
    <string name="ascending">Ascensing</string>
    <string name="decending">Decending</string>
    <string name="sort">Sort</string>
    <string name="ok">Ok</string>
    <string name="create">Create</string>
    <string name="file_already_exists">File already exists</string>
    <string name="fail_creating_folders">Failed to create a folder</string>
    <string name="exception_dialog_title">Exceptions have been thrown!</string>
    <string name="error">Error</string>
    <string name="permission_denied_message">Application cannot proceed without proper permissions.</string>
    <string name="request_permission_message">This application needs storage permissions to work.</string>
    <string name="grant">Grant</string>
    <string name="exit">Exit</string>
    <string name="select">Select</string>
    <string name="request_sd_card_permission_message">This application cannot write to a sd card. Please select SD Card folder to grant write access!</string>
    <string name="move_to_here">Move to here</string>
    <string name="item_format">%s items</string>
    <string name="rename_folder">Rename folder</string>
    <string name="rename_file">Rename file</string>
    <string name="fail_rename_file_message">Fail to rename the file</string>
    <string name="fail_rename_folder_message">Fail to rename the folder</string>
    <string name="calculating">Calculating...</string>
    <string name="last_modified">Last Modified</string>
    <string name="containing">Containing</string>
    <string name="path">Path</string>
    <string name="one_file_format">%s file</string>
    <string name="plural_files_format">%s files</string>
    <string name="one_folder_format">%s folder</string>
    <string name="plural_folder_format">%s folders</string>
    <string name="save_to">Save to</string>
    <string name="downloading">Downloading</string>
    <string name="deleting">Deleting</string>
    <string name="copy_to_here">Copy to here</string>
    <string name="notification_channel_title">Main notification</string>
    <string name="notification_channel_description">Main notification channel</string>
    <string name="notification_title">Background service</string>
    <string name="notification_description">Sharing files locally...</string>
    <string name="others">Others</string>
    <string name="copying">Copying</string>
    <string name="moving">Moving</string>
    <string name="reset_to_default">Reset to Default</string>
    <string name="download_and_open">Download and Open</string>
    <string name="cache">Cache</string>
    <string name="thumbnails_cache">Thumbnails Cache</string>
    <string name="delete_thumbnails_cache">Delete thumbnails cache</string>
    <string name="download_cache">Downloads Cache</string>
    <string name="delete_download_cache">Delete download cache</string>
    <string name="delete_confirmation">Do you want to delete %s to free up %s?</string>
    <string name="go_to">Go to</string>
    <string name="go">Go</string>
    <string name="cannot_open_message">Cannot open %s</string>
    <string name="confirm_connect_request">Confirm connect request</string>
    <string name="confirm_connect_request_desc">Show a notification when client tries to connect to your server</string>
    <string name="confirm_connect_request_channel">Confirm connect request notification</string>
    <string name="confirm_connect_request_channel_desc">Confirm connect request notification channel</string>
    <string name="confirm_connect_request_notification_title">%s wants to connect to your device</string>
    <string name="confirm_connect_request_notification_desc">Click for more information (%s%s)</string>
    <string name="confirm">Confirm</string>
    <string name="reject">Reject</string>
    <string name="confirm_connect_request_activity_desc">%s [%s] wants to connect to your device</string>
    <string name="connecting_dialog_title">Connecting</string>
    <string name="connecting_dialog_desc">Connecting to %s... (%s%s)</string>
    <string name="password">Password</string>
    <string name="no_password">No password</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="wrong_password">Wrong password</string>
    <string name="connection_failed">Connection failed</string>
    <string name="access_denied">Access denied</string>
    <string name="timeout">Timeout</string>
    <string name="second">s</string>
    <string name="server_address">Host : %s Port : %s</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not connected</string>
</resources>
