<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <PreferenceCategory
        app:title="@string/general">
        
        <EditTextPreference
            app:key="name"
            app:title="@string/name"/>
        
         <EditTextPreference
            app:key="password"
            app:title="@string/password"/>
        
        <ListPreference
            app:defaultValue="0"
            app:entries="@array/theme_labels"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/theme"/>

    </PreferenceCategory>
    
    <PreferenceCategory
        app:title="@string/files">
        
        <com.abiddarris.lanfileviewer.settings.CustomPreference
            app:key="roots"
            app:title="@string/root_files"/>
        
    </PreferenceCategory>
    
    <PreferenceCategory
        app:title="@string/permission">
        
        <SwitchPreferenceCompat
            app:key="confirmConnectRequest"
            app:title="@string/confirm_connect_request"
            app:summary="@string/confirm_connect_request_desc"/>
         <ListPreference
            app:defaultValue="1"
            app:entries="@array/modify_permission"
            app:entryValues="@array/modify_permission_values"
            app:key="writeAccess"
            app:title="@string/write_access"/>
        
         <ListPreference
            app:defaultValue="1"
            app:entries="@array/modify_permission"
            app:entryValues="@array/modify_permission_values"
            app:key="deleteAccess"
            app:title="@string/delete_access"/>
        
    </PreferenceCategory>
    
     <PreferenceCategory
        app:title="@string/cache">
        
        <com.abiddarris.lanfileviewer.settings.CustomPreference
            app:key="downloadsCache"
            app:summary="@string/delete_download_cache"
            app:title="@string/download_cache"/>
        
        <com.abiddarris.lanfileviewer.settings.CustomPreference
            app:key="thumbnailsCache"
            app:summary="@string/delete_thumbnails_cache"
            app:title="@string/thumbnails_cache"/>
        
    </PreferenceCategory>
  
</PreferenceScreen>