<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/move"
        app:showAsAction="always | withText"
        android:title="@string/move" />

    <item
        android:icon="@drawable/ic_copy"
        android:title="@string/copy"
        android:id="@+id/copy"
        app:showAsAction="always | withText"/>
    
    <item
        android:icon="@drawable/ic_download"
        android:title="@string/download"
        android:id="@+id/download"
        app:showAsAction="always | withText"/>
    
    <item
        android:icon="@drawable/ic_trash"
        android:title="@string/delete"
        android:id="@+id/delete"
        app:showAsAction="always | withText"/>
    
    <item
        android:title="@string/detail"
        app:showAsAction="never"
        android:id="@+id/detail"/>
    
    <item
        android:title="@string/rename"
        app:showAsAction="never"
        android:id="@+id/rename"/>
    
    <item
        android:title="@string/compress"
        app:showAsAction="never"
        android:id="@+id/compress"/>
    
</menu>