<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="match_parent">

    <RelativeLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         style="@style/DialogRootLayoutStyle">

        <RadioGroup
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:id="@+id/sortBy">

            <RadioButton
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/name"
                 android:text="@string/name" />

            <RadioButton
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/date"
                 android:text="@string/date" />

            <RadioButton
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/type"
                 android:text="@string/type" />

            <RadioButton
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/size"
                 android:text="@string/size" />

        </RadioGroup>

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_below="@id/sortBy"
             android:layout_marginTop="10dp"
             android:id="@+id/sortText"
             android:text="@string/sort" />

        <RadioGroup
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_below="@id/sortText"
             android:layout_marginTop="15dp">

            <RadioButton
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/ascending"
                 android:text="@string/ascending" />

            <RadioButton
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/decending"
                 android:text="@string/decending" />

        </RadioGroup>

    </RelativeLayout>

</LinearLayout>