<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="match_parent">

    <RelativeLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginTop="40dp">

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:textSize="17sp"
             android:id="@+id/file_name"
             android:text="@string/operation_options_description" />

        <CheckBox
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_below="@id/file_name"
             android:layout_marginTop="15dp"
             android:id="@+id/apply_to_similar_items"
             android:text="@string/operation_options_apply_to_similar_items" />

        <Button
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_below="@id/apply_to_similar_items"
             style="@style/Widget.Material3.Button.TextButton"
             android:layout_marginTop="15dp"
             android:id="@+id/skip"
             android:text="@string/skip" />

        <Button
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_below="@id/skip"
             style="@style/Widget.Material3.Button.TextButton"
             android:id="@+id/replace"
             android:text="@string/replace" />

        <Button
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_marginBottom="15dp"
             android:layout_below="@id/replace"
             style="@style/Widget.Material3.Button.TextButton"
             android:id="@+id/rename"
             android:text="@string/rename" />

    </RelativeLayout>

</LinearLayout>