<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:gravity="center"
     android:id="@+id/actions">

    <RelativeLayout
         android:layout_height="@dimen/explorer_action_button_height"
         android:layout_width="@dimen/explorer_action_button_width"
         style="@style/SelectActionLayout"
         android:id="@+id/move">

        <ImageView
             android:layout_height="@dimen/explorer_action_button_image_size"
             android:layout_width="@dimen/explorer_action_button_image_size"
             style="@style/ImageStyle" />

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             style="@style/TextStyle"
             android:text="@string/move" />

    </RelativeLayout>

    <RelativeLayout
         android:layout_height="@dimen/explorer_action_button_height"
         android:layout_width="@dimen/explorer_action_button_width"
         style="@style/SelectActionLayout"
         android:id="@+id/copy">

        <ImageView
             android:layout_height="@dimen/explorer_action_button_image_size"
             android:layout_width="@dimen/explorer_action_button_image_size"
             android:src="@drawable/ic_copy"
             style="@style/ImageStyle" />

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             style="@style/TextStyle"
             android:text="@string/copy" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_height="@dimen/explorer_action_button_height"
         android:layout_width="@dimen/explorer_action_button_width"
         style="@style/SelectActionLayout"
         android:id="@+id/download">

        <ImageView
             android:layout_height="@dimen/explorer_action_button_image_size"
             android:layout_width="@dimen/explorer_action_button_image_size"
             android:src="@drawable/ic_download"
             style="@style/ImageStyle" />

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             style="@style/TextStyle"
             android:text="@string/download" />

    </RelativeLayout>

    <RelativeLayout
         android:layout_height="@dimen/explorer_action_button_height"
         android:layout_width="@dimen/explorer_action_button_width"
         style="@style/SelectActionLayout"
         android:id="@+id/delete">

        <ImageView
             android:layout_height="@dimen/explorer_action_button_image_size"
             android:layout_width="@dimen/explorer_action_button_image_size"
             android:src="@drawable/ic_trash"
             style="@style/ImageStyle" />

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             style="@style/TextStyle"
             android:text="@string/delete" />

    </RelativeLayout>

    <RelativeLayout
         android:layout_height="@dimen/explorer_action_button_height"
         android:layout_width="@dimen/explorer_action_button_width"
         style="@style/SelectActionLayout"
         android:id="@+id/others">

        <ImageView
             android:layout_height="@dimen/explorer_action_button_image_size"
             android:layout_width="@dimen/explorer_action_button_image_size"
             style="@style/ImageStyle" />

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             style="@style/TextStyle"
             android:text="@string/others" />

    </RelativeLayout>

</LinearLayout>